2009-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * New release: Spell Check 0.3.


2009-02-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Revert back the changes to use the "editor-notify" signal as it
   makes things worse than before. Instead use the old code to connect
   to the global "key-press-event" signal but reduce the delay
   to half a second to make checking while typing smoother.


2009-02-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am:
   Fix 'make distcheck' by uninstalling documentation files.


2009-02-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Use the "editor-notify" signal to catch text modifications for
   checking while typing. Also remove the timeout which never worked
   as intended.
   Don't add suggestions to the messages window when checking while
   typing.
   These changes should increase the usability and accuracy of the
   'check while typing' feature while not being much slower (if ever).
 * src/gui.c, src/scplugin.c, src/scplugin.h:
   Display accelerator on the 'Default' menu item.
 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Prefix all non-static functions which sc_ to avoid symbol clashes.
 * src/speller.c:
   Synchronise lexer checks with Geany's new filetypes.


2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/sc_plugin.c:
   Use Geany's main_locale_init() to init the localisation system.


2009-02-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Display a pulsing progressbar while checking large documents.


2009-02-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Remove unnecessary gpointer casts.