@@ -41,12 +41,14 @@ void sc_gui_kb_toggle_typing_activate_cb(guint key_id);
 
 void sc_gui_create_edit_menu(void);
 
-GtkWidget *sc_gui_create_menu(GtkWidget *sp_item);
+void sc_gui_create_menu(GtkWidget *sp_item);
 
 void sc_gui_update_editor_menu_cb(GObject *obj, const gchar *word, gint pos,
 								  GeanyDocument *doc, gpointer user_data);
 
 void sc_gui_toolbar_update(void);
+
+void sc_gui_update_menu(void);
 
 void sc_gui_init(void);
 
